<resources>
    <string name="app_name">ReLeaf</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="challenge_name">challenge_name</string>
    <string name="challenge_desc">challenge_desc</string>
    <string name="log_it">Log It</string>
    <string name="vegetarian_title">Vegetarian Meal Day</string>
    <string name="vegetarian_desc">Cow manure is the leading cause of global warming.
    Reduce it to save the planet. By eating a vegetarian meal you are reducing the amount of
    meat bought which will then discourage the production of more meat.</string>
    <string name="light_title">Turn off the lights</string>
    <string name="light_desc">Turn off the lights and save electricity!</string>
    <string name="altertransport_title">Alternate Transportation</string>
    <string name="altertransport_desc">Take a walk. Ride a bike. Not only you reduce carbon footprint, but also improve your health! </string>
    <string name="shower_title">5 min Shower</string>
    <string name="shower_desc">By reducing the duration of your shower, you can reduce the amount of water
    you use and which takes energy to pump and heat!</string>
    <string name="publtransport_title">Public Transportation</string>
    <string name="publtransport_desc">Taking public transit is one less car on the road. Less traffic jam and less carbon footprint!</string>
    <string name="challenge_complete_toast">Great Job! %d ecodollars earned</string>
    <string name="user_name">user_name</string>
    <string name="num_carbon_lbs">%d</string>
    <string name="carbon_lbs">Pounds of Carbon Saved</string>
    <string name="store">Store</string>
    <string name="challengespage">Challenges</string>
    <string name="num_ecodollars">%d ecodollars</string>
    <string name="buy">Buy</string>
    <string name="item_name" translatable="false">%s</string>
    <string name="ecodollars">ecodollars</string>
    <string name="Email">E-mail</string>
    <string name="password">Password</string>
    <string name="fullname">Full name</string>
    <string name="register">Register</string>
    <string name="Registration">Registration</string>
    <string name="login">Login</string>
    <string name="forgotpassword">I forgot my password</string>
    <string name="pwResetButton">Send a password reset email</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Settings">Settings</string>
    <string name="title_CO2">CO2</string>
    <string name="title_Shop">Shop</string>
    <string name="AppLogo">AppLogo</string>
    <string name="registerProfilePhoto">registerProfilePhoto</string>
    <string name="Register">Register</string>
    <string name="title_Challenge">Challenges</string>
    <string name="haven_background">haven background</string>
    <string name="roofTopDesc">Roof Top Image</string>

</resources>
