<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/releaf_nav_icons0001"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/releaf_nav_icons0002"
        android:title="@string/title_Shop" />
    <item
        android:id="@+id/navigation_carbonVisualizations"
        android:icon="@drawable/releaf_nav_icons0004"
        android:title="@string/title_CO2" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/releaf_nav_icons0005"
        android:title="@string/title_Profile" />
    <item
        android:id="@+id/navigation_challenges"
        android:icon="@drawable/releaf_nav_icons0006"
        android:title="@string/title_Challenge" />

</menu>